--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Proj
+
+springdoc.swagger-ui.path=/swagger
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.display-query-params-without-oauth2=true
+springdoc.paths-to-match=/**
+
